# kwhisper

./: README.es.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
packaging/: 99-uinput.rules  kwhisper.service  kwhisper.service.in
scripts/: setup.sh  smoke_stt.py  test_inject.sh
src/kwhisper/: __init__.py  app.py  audio.py  commands.py  config.py  correction_dialog.py  dictionary.py  doctor.py  feedback.py  i18n.py  inject.py  kwin_overlay.py  llm.py  overlay.py  settings_dialog.py  stt.py  tray.py  tts.py  tts_worker.py  window.py  wizard.py
src/kwhisper/hotkey/: __init__.py  evdev_listener.py  findkey.py  portal_listener.py
tests/: test_unit.py
